# object-detector

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo.py  docker_build.sh  docker_push.sh  main.py  pyproject.toml  run_stage.py  settings.template.yaml  start_make.sh
.github/: dependabot.yml
.github/workflows/: build-publish-latest.yml  build-release-latest.yaml  create-release.yml  pr_build.yaml
debian/: changelog  control  install  objectdetector.service  postinst  preinst  prerm  requirements.txt  rules
doc/: DEV_README.md  Model_Development.md
objectdetector/: __init__.py  batch.py  config.py  detector.py  errors.py  model.py  stage.py
tests/: test_object_detector.py
yolo_optimization/: README.md  export_tensorrt.py
