[tool.poetry]
name = "objectdetector"
version = "2.1.0"
description = "Wraps a state-of-the-art detection model and communicates on its inputs and outputs following visionapi."
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.0.97"
pydantic = "^2.0.0"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "2.0.0" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.8.0" }
torch = "2.2.1"
torchvision = "0.17.1"
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
